finish ooptimize params